--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^12.0.3",
     "@react-native-community/masked-view": "0.1.10",
     "expo": "~40.0.0",
     "expo-app-loading": "^1.0.1",
@@ -22,6 +23,7 @@
     "react-native-screens": "^2.15.2",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.3",
+    "react-navigation-header-buttons": "^6.2.1",
     "react-navigation-stack": "^2.10.2"
   },
   "devDependencies": {
